--- a/app/hero-detail.component.html
+++ b/app/hero-detail.component.html
@@ -7,4 +7,5 @@
             <input [(ngModel)]="hero.name" placeholder="name" />
         </div>
         <button (click)="goBack()">Back</button>
-    </div>
+        <button (click)="save()">Save</button>
+</div>
